[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "balls-generation"
version = "0.1.0"
description = "A system for generating stories about balls with AI-generated illustrations"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["balls_generation*"] 